--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
     "faker": "^4.1.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
@@ -43,17 +42,19 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "rtl-loader": "^1.2.1",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^1.1.2",
+    "url-loader": "^0.5.8",
+    "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.0.0",
+    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
