--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "faker": "^4.1.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
+    "vue-lottie": "^0.2.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
